Create gradient for accuracy bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         margin: 0;
       }
     </style>
-    <canvas id="game-canvas"></canvas>
+    <canvas id="canvas"></canvas>
     <script type="application/javascript" src="canvas.js">
     </script>
   </body>
