Add custom artwork for background

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Big Fish</title>
     <link rel="stylesheet" href="styles.css">
+    
   </head>
 
   <body>
@@ -20,8 +21,11 @@
       <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
     </div>
 
-    <div id="success">
 
+
+    <div id="background">
+      <div id="success"></div>
+        <canvas id="background-canvas"></canvas>
     </div>
 
     <script type="application/javascript" src="accuracy_bar.js"></script>
