Style background to fit screen and reposition accuracy bar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Big Fish</title>
     <link rel="stylesheet" href="styles.css">
-    
+
   </head>
 
   <body>
@@ -13,8 +13,8 @@
         background-color: lightgray;
       }
       body { margin: 0; }
-
     </style>
+
 
     <div class="entire-bar">
       <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
@@ -22,12 +22,11 @@
     </div>
 
 
-
-    <div id="background">
-      <div id="success"></div>
-        <canvas id="background-canvas"></canvas>
-    </div>
+    <div id="success"></div>
 
     <script type="application/javascript" src="accuracy_bar.js"></script>
+
+    <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/big-fish-bg-02.png"/>
+    
   </body>
 </html>
