Replace canvas rectangles with custom artwork

--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
 
   <body>
     <h1>Big Fish</h1>
-    <style media="screen" type="text/css">
-      canvas #bar-bg {
-        border: 1px solid black;
-        background-color: lightgray;
-      }
-      body { margin: 0; }
-    </style>
-
 
     <div class="entire-bar">
+      <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/timingbar.png"/>
+
       <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
       <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
-    </div>
 
+    </div>
 
     <div id="success"></div>
 
     <script type="application/javascript" src="accuracy_bar.js"></script>
 
-    <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/big-fish-bg-02.png"/>
-    
+    <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/big-fish-bg-02.png"/>
+
   </body>
 </html>
