--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     </div>
 
-    <div id="success"></div>
+    <div id="result">
+      
+    </div>
 
     <script type="application/javascript" src="accuracy_bar.js"></script>
 
