Create new canvas for result display

--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
   </head>
 
   <body>
+    <div class="game">
+      <div class="entire-bar">
+        <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/timingbar.png"/>
 
-    <div class="entire-bar">
-      <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/timingbar.png"/>
+        <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
+        <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
+      </div>
 
-      <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
-      <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
+      <canvas id="result"></canvas>
+
+
+      <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/big-fish-bg-02.png"/>
+
+      <script type="application/javascript" src="accuracy_bar.js"></script>
 
     </div>
 
-    <div id="result">
-      
-    </div>
-
-    <script type="application/javascript" src="accuracy_bar.js"></script>
-
-    <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/big-fish-bg-02.png"/>
 
   </body>
 </html>
