Add more styling and artwork

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
     <title>Big Fish</title>
     <link rel="stylesheet" href="styles.css">
 
+
   </head>
 
   <body>
+    <div class="test">Big Fish is a simple timing game.
+    </br>
+     Press the space bar to play
+   </br>
+     catch as many fish as you can !</div>
     <div class="game">
       <div class="entire-bar">
-        <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/timingbar.png"/>
+        <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/assets/images/timingbar.png"/>
 
         <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
         <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
@@ -17,7 +23,7 @@
       <canvas id="result"></canvas>
 
 
-      <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/images/big-fish-bg-02.png"/>
+      <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/assets/images/big-fish-bg-02.png"/>
 
       <script type="application/javascript" src="accuracy_bar.js"></script>
 
