--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      catch as many fish as you can !</div>
     <div class="game">
       <div class="entire-bar">
-        <img id="timing-bar" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/assets/images/timingbar.png"/>
+        <img id="timing-bar" src="./assets/images/timingbar.png"/>
 
         <canvas id="bar" style="position: absolute; z-index: 1;"></canvas>
         <canvas id="bar-bg" style="position: absolute; z-index: 0;"></canvas>
@@ -23,9 +23,9 @@
       <canvas id="result"></canvas>
 
 
-      <img id="bg" src="/Users/Ken/Desktop/a:A/javascript_project/big_fish/assets/images/big-fish-bg-02.png"/>
+      <img id="bg" src="./assets/images/big-fish-bg-02.png"/>
 
-      <script type="application/javascript" src="accuracy_bar.js"></script>
+      <script type="application/javascript" src="./accuracy_bar.js"></script>
 
     </div>
 
