Add instructions and style to center

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   </head>
 
   <body>
-    <div class="test">Big Fish is a simple timing game.
-    </br>
-     Press the space bar to play
-   </br>
-     catch as many fish as you can !</div>
+
     <div class="game">
       <div class="entire-bar">
         <img id="timing-bar" src="./assets/images/timingbar.png"/>
@@ -29,6 +25,8 @@
 
     </div>
 
+    <div class="instructions">Big Fish is a simple timing game. Press the space bar to play and catch as many fish as you can !
+   </div>
 
   </body>
 </html>
