--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-
+    <div class="mute" onClick="mute()">MUTE<div>
     <div class="game">
       <div class="entire-bar">
         <img id="timing-bar" src="./assets/images/timingbar.png"/>
