Add github and linkedin links to top of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   </head>
 
   <body>
+
+    <div class="links">
+      <a href="https://github.com/kchansf5/Big-Fish"><img class="github" src="./assets/images/github.png"/></a>
+
+      <a href="https://www.linkedin.com/in/kchansf5/"><img class="linkedin" src="./assets/images/linkedin.png"/></a>
+    </div>
+
     <div class="game">
       <div class="entire-bar">
         <img id="timing-bar" src="./assets/images/timingbar.png"/>
