Add additional instructions for game'

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
 
     </div>
 
-    <div class="instructions">Big Fish is a simple timing game. Press the space bar to play and catch as many fish as you can !
+    <div class="instructions">
+      Big Fish is a simple timing game. Press the space bar to play and catch as many fish as you can !
+    </div>
+  </br>
+    <div class="instructions">
+      Stop the timing bar in the middle green section to catch a fish!
     </div>
 
   </body>
